# traintracks-cpp-sdk

./: .gitignore  CMakeLists.txt  EchoServer.py  my_bashrc  testcode.cpp  traintracks-sdk.sln
SampleNDK/app/: build.gradle  proguard-rules.pro
TestDriver/: TestDriver.cpp  TestDriver.vcxproj  TestDriver.vcxproj.filters
casablanca/: .gitignore  CONTRIBUTORS.txt  ThirdPartyNotices.txt  cpprestsdk110.sln  cpprestsdk120.sln  cpprestsdk140.sln  setup_ps_env_VS2012.ps1  setup_ps_env_VS2013.ps1  setup_ps_env_VS2015.ps1
casablanca/Build_android/: boost-for-android-x86.patch  boost-for-android.patch  configure.sh
casablanca/Build_android/libiconv/: libiconv.patch
casablanca/Build_iOS/: CMakeLists.txt  README.md  configure.sh  fix_boost_version.patch
casablanca/Release/: CMakeLists.txt  dirs.proj  public_apis_doxyfile
casablanca/Release/nuget/: cpprestsdk.android.nuspec  cpprestsdk.android.targets  cpprestsdk.nuspec  cpprestsdk.props  cpprestsdk.targets  init.ps1  readme.txt  rename_stripped_pdbs.ps1  (+1 more)
common/: CMakeLists.txt
common/util/: .gitignore  BuildMode.h  CMakeLists.txt  CSplitPath.cpp  CSplitPath.h  ClientAssert.cpp  ClientAssert.h  CommonAssert.cpp  CommonAssert.h  CommonLogging.cpp  CommonLogging.h  ExceptionHandler.cpp  ExceptionHandler.h  StringHelpers.cpp  StringHelpers.h  StringUtils.cpp  StringUtils.h  endian.h  server_types.h  stdafx.cpp  stdafx.h  targetver.h  testcpp.cpp
hello-jni/: local.properties
hello-jni1/: import-summary.txt  local.properties
testapp/: CMakeLists.txt  testapp.cpp
traintracks-sdk/: DateHandler.cpp  DateHandler.h  ReadMe.txt  SdkClass.cpp  SdkClass.h  StringHelpers.cpp  StringHelpers.h  md5.cpp  md5a.cpp  server_types.h  stdafx.cpp  traintracks-sdk.vcxproj  traintracks-sdk.vcxproj.filters
(+459 files in other folders)
